--- a/inst/exercises/npzd/NPZD.Rmd
+++ b/inst/exercises/npzd/NPZD.Rmd
@@ -14,22 +14,15 @@ output:
     \floatplacement{figure}{ht}
 ---
 
-```{r child = 'npzd_Q.Rmd'}
+```{r child = 'NPZD_Q.Rmd'}
 ```
 
-<<<<<<< HEAD
 \newpage
 ```{r child = 'NPZD_A.Rmd'}
 ```
 
 \newpage
 ```{r child = 'NPZD2_A.Rmd'}
-=======
-```{r child = 'npzd_A.Rmd'}
-```
-
-```{r child = 'npzd2_A.Rmd'}
->>>>>>> GhentExamples
 ```
 
 # References
