--- a/inst/exercises/introductionR/introductionR.Rmd
+++ b/inst/exercises/introductionR/introductionR.Rmd
@@ -19,11 +19,11 @@ output:
 abstract: \noindent This short reader introduces you to the programming tools that we will use in the *Reaction-Transport Modelling* class. It will show you how to merge text, programming code, and the results of this code in one document. The programming language we use is R, the text is written in *R Markdown*, and the creation of the documents is done by *knitr*. We recommend that you recreate the examples provided in this document and then solve the exercises. In this way you will start gradually building your knowledge of R and *R Markdown*, which will help you understand more efficiently the material covered in the course.
 ---
 
-```{r child = 'modelersR_Q.Rmd'}
+```{r child = 'introductionR_Q.Rmd'}
 ```
 
 \newpage
 
-```{r child = 'modelersR_A.Rmd'}
+```{r child = 'introductionR_A.Rmd'}
 ```
 
