--- a/inst/doc/RTM_vignette.Rmd
+++ b/inst/doc/RTM_vignette.Rmd
@@ -49,64 +49,55 @@ while in previous years students would complain that they do not get enough prac
 
 To prepare for each lesson, students are offered the choice to either read one or more chapters from the textbook (Soetaert and Herman, 2009), or watch a short video that explains the theory. Then they are encouraged to test the understanding of the theory by answering a number of short (often multiple-choice) questions. After this "priming", students go to the classroom, where they submerge themselves, under the supervision of tutors, in solving more substantial exercises.
 
-## Video's that elaborate on the theory
+## Videos that elaborate on the theory
 
-One way of “flipping” the classroom is by means of video lessons that elaborate on the theory. There is a series of videos for all the material taught in the modelling class. 
+The theory behind the material taught in the modelling courses is explained in a series of educational videos. The videos, which typically take around 15 minutes or less, were created as follows:
 
-The videos typically take around 15 minutes or less, and are created as follows:
-
-   - (1) first didactically sound slide presentations are created, 
-   - (2) the narrative of the material on the slides is written down, and 
-   - (3) the spoken text is recorded while playing the slides. 
+1. Didactically sound slide presentations were created.
+2. The narrative for the material on the slides was written down.
+3. The narrative was recorded and combined with the slides.
    
-Steps (1) and (2) need substantial input from the tutors. Step (3) can be outsourced.
+Steps 1 and 2 were created by the tutors, while step 3 was partially outsourced and partially edited by the tutors.
 
-Apart from the direct benefits, this teaching approach also offers a number of longer-term advantages. The video material has been put on the internet (i.c., youtube) to serve as an online course. 
+Creation of the educational videos offers several longer-term advantages. For example, they were made available to the public as a YouTube playlist (\url{https://www.youtube.com/playlist?list=PLx8PHcDdmF-uD1Pr07TU9SzlhlGpfrxqn}), and so can serve as an online course. Also, if students wish to refresh their knowledge of the subject, they can re-watch the videos at any time and in any order. Importantly, they can watch the videos at their own pace (e.g., if some students find the videos too slow, multi-tasking or the fast-forward knob is an option).
 
-Also, it can be used by students at any time to refresh their knowledge on a subject. 
-Students can move through these videos at their own pace - some complain that they go too slow - multi-tasking or the fast-forward knob is then an option. 
+## Quiz-like questions
 
-## Quizzes and questions
+Each video is accompanied by a set of quiz-like questions and small exercises. These were implemented in the form of *tutorials* provided by the R-package *learnr* (Schloerke et al., 2020). They mostly consist of multiple-choice questions, sprinkled here and there with a more substantial exercise that needs an R-code for it to be solved.
 
-Each of the video lessons is accompanied by a set of quizzes (questions), and small exercises, so that the student can test her/his knowledge on the subject. 
+The quizzes were designed to allow the students to test their basic understanding of the subject explained in the video. Before we introduced these quizzes, we often noted that some students overestimate their grasp of the material and are overly confident, while others are baffled by the complexity of the material and may loose confidence that they will eventually manage to understand it. The quizzes allow students to make this assessment by, and for, themselves. They are not graded, but the students are encouraged to use them for their own benefit, as they facilitate better preparation for the more substantial exercises in the classroom and --- ultimately --- for the exam. The quizzes also improve students’ quantitative and problem-solving skills by giving them hints and guidance as to how to tackle specific questions.
 
-Before we introduced thes quizzes, we often noted that some students overestimate their grasp of a subject, and are overly confident. Other students are baffled by the complexity of the material and may loose confidence that they eventually will manage the topic. As one student said (in his/her evaluation): "I loved this course, but the pressure was immense".
+## Classroom exercises
 
-The questions and small exercises help them assess how far they have understood the lessons, and also prepares them more thoroughly for the exercises in class, and -ultimately- for the exam. 
-Another aim is to improve students’ quantitative problem-solving skills, by giving them hints and guidance as to how they can tackle a certain question. 
+While in the classroom, students work in small groups (2--4 students per group) on practical modelling exercises and applications. The focus is that the exercises address current environmental issues, the approaches required to solve the exercises are versatile, and that students design, develop and fully implement their own models from scratch (e.g., starting from a conceptual diagram and ending with an R-code that generates quantitative predictions).
 
-The implementation of the questions has been done in the form of 'tutorials' as provided from the *learnr* package (Schloerke et al., 2020). They consist of multiple-choice questions, with here and there a more substantial exercise that the students have to solve using R code.
+At the time of writing this vignette, the exercises address, among others, the following environmental issues:
 
-There is no grading of these tutorials, so the students may use them for their own benefit. However, as they also serve to prepare for some of the exam questions, this hopefully gives extra impetus to actually conduct the quizzes and make the exercises.
+* *The CO$_2$ problem*. Atmospheric CO$_2$ concentrations are described by an Earth-system box model that comprises carbon fluxes among the major Earth's carbon reservoirs. The model is used to estimate the impact of anthropogenic activities (e.g., burning of fossil fuels, deforestation) on the atmospheric CO$_2$ concentrations and to explore the effects of certain mitigation strategies (e.g., ocean fertilisation).
+* *The ozone problem*. Ozone is a green-house gas and, at high concentrations, harmful to humans and animals. It also plays an important protective role by absorbing harmful UV radiation. The ozone model is used to test how anthropogenic emissions of NO (nitric oxide) due to combustion or burning of fuels alter the natural ozone dynamics in the lower atmosphere. It is a good example of a "typical" chemistry model.
+* *Ocean acidification*. This is a very complex problem as it deals with equilibrium chemistry. The topic is introduced by three exercises of increasing complexity. A more extensive model dealing with ocean acidification is not part of the mandatory course material, but is provided as auxiliary material that students may consult if they are interested in the topic (see below).
+* *The COVID pandemic*.  An epidemiological model (so-called SIR model) is developed to describe the spread of the SARS-CoV2 (corona) virus within a population. In addition to infection and recovery, the model includes hospitalisations, mortality, vaccination, and virus mutations. The students practice how to use information from epidemiologists (who are not modelers) to develop and apply models.
+* *Agricultural eutrophication*. This model describes how fertilization with nutrients affects the competition between crops and weeds, and explores the impact of different fertilization strategies on agricultural run-off. In addition to ecological interactions, the model also contains a (simplistic) economic component that lets students explore the monetary aspects of farming.
+* *Dead zones in a river*. This one-dimensional reaction-transport model describes the distribution of dissolved oxygen concentrations in a river subjected to excessive nutrient input (ammonia). The model is used to estimate the maximal nutrient inputs that can be allowed to keep the minimal oxygen concentration above a certain critical level.
 
-## Exercises
-
-During class the students have to work in small groups on practical modelling applications. The models deal with a variety of environmental issues. Care has also been taken to make the approaches in the exercises versatile. 
-
-At the time of writing this vignette, the exercises dealt, a.o. with the following environmental issues:
-
-* *The CO2 problem*. The atmospheric CO2 concentrations are described with an *earth-system box model* of carbon fluxes amongst the large earth compartments. The impact of anthropogenic activities on the atmospheric CO2 concentration is estimated. Effects of some mitigation strategies is calculated.
-* *The ozone problem*. The ozone concentration in the lower atmosphere is modeled. Ozone is a green-house gas and at high concentrations ozone is harmful to humans and animals. It also plays an important role in absorbing UV radiation. The model is a good example of a typical *chemistry model*, and is used to test how anthropogenic emissions of NO (nitric oxide) due to combustion or burning of fuels alter the natural ozone dynamics.
-* *Ocean acidification*. This is a very complex problem as it deals with *equilibrium chemistry*. The topic is introduced by three exercises of increasing complexity. A more extensive model of ocean acidification is not part of the mandatory material, but is dealt with in the accessory material (see below) that students may consult if they are interested in the topic.  
-* *The COVID pandemic*.  A set of *population, epidemiological* (so-called SIR) models are implemented to describe the spread of the SARS-CoV2 (corona) virus, including the hospitalisations and mortality rates. The students practice how to use information from epidemiologists (that are not modelers) in their models.
-* *Agricultural eutrophication*. This model application, that describes how fertilization with nutrients affects the *competition* between crops and weeds, also contains a (rather simplistic) *economic component* that accounts for the profits farming can bring.
-* *Low oxygen in a river*. This is a 1-dimensional *reaction transport model* that describes the evolution of the oxygen concentration in a river, that is subjected to excessive nutrient input (ammonia). The model is used to estimate the level in nutrient inputs that keep the minimal oxygen concentration above a certain critical level.
-
-Other material is:
+Additional exercise topics include
 
 * Introduction to R for modellers
-* Making conceptual schemes and creating mass balance equations
-* The dissolution kinetics of Silica particles
-* Bacterial decay of detritus
-* Early diagenesis in marine sediments (the coupled cycles of C, N, O, S).
-* Competition between plants in grasslands.
+* Making of conceptual diagrams and formulating of mass balance equations
+* Dissolution of silica particles (e.g., diatom frustules)
+* Bacteria-mediated mineralisation of detritus
+* Early diagenesis in marine sediments (a simplified P cycle, and the coupled cycles of C, N, O, and S)
+* Food web modelling of a lake or river ecosystem
+* Competition between plants in grasslands
 * Competition between floating plants and algae in shallow lakes
 * Virus dynamics in the ocean
-* Bioeconomic modelling of a Scallop aquaculture
+* Bio-economic modelling of a Scallop aquaculture
 
-New material may be added in the future, thus creating a repository from which modules can be selected based on students interests that vary from year to year.
+New material can be added in the future, thus creating a repository from which modules can be selected based on students' interests that vary from year to year.
 
-## Accessory material
+## Auxiliary material
+
+CONTINUE EDITING HERE
 
 This consists of a number of small documents that go into somewhat more detail for various topics. It is not compulsory material, so the students get to see this after the exam, and before they start the projects (see below).
 
